--- a/Public/views/home.ejs
+++ b/Public/views/home.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>homepage</title>
     <link rel="stylesheet" href="/Finance_Project/Public/views/styles/style2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -49,6 +49,15 @@
             </div>
         </div>
     </nav>
+
+    <form action="/entre" method="POST">
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="pin">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    
 
 
 
