dashboard ejs & dashboardStyle.css file added

--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -58,7 +58,7 @@
           <input type="password" class="form-control" id="pin" name="pin" placeholder="do not share" required>
         </div> -->
         <div class="pin-boxes" >
-          <input type="password" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+          <input type="password" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" autofocus autocomplete="off" />
           <input type="password" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
           <input type="password" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
           <input type="password" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
