--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dash Board</title>
+    <link rel="stylesheet" href="/styles/dashboardStyle.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="/Finance_Project/Public/styles/dashboardStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+
+    
+  </head>
 <body>
 <div class="container">
 <aside>
@@ -60,23 +63,22 @@
   <div class="all-finDtls">
     <div class="card">
       <div class="card-header">
-        <h1> FinBank w</h1>
-        <img class="logo" src="/0b087c9ad51a5c0a3afd57a05ebe4bee-removebg-preview.png" alt="Visa Logo">
+        <h1> FinBank </h1>
+        <img class="logo" src="/styles/WhatsApp Image 2024-06-19 at 16.34.24_3318d1b8. alt="Visa Logo">
       </div>
       <div class="card-number">
         1234 5678 9110 6678
-        <!-- <%= cardNumber %> -->
       </div>
       <div class="card-footer">
         <span>Cardholder name</span>
-        <h2>Messi<!--<%= cardHolderName %>--></h2>
+        <h2>Messi</h2>
         <span class="exDate">Expiry date</span>
-        <h2 class="exDateDtls">08/2028<!--<%= expiryDate %>--></h2>
+        <h2 class="exDateDtls">08/2028</h2>
       </div>
     </div>
     <div class="balance">
       <h1>Balance</h1>
-      <h2> Rs.12134.66<!-- <%= users.balance %> --></h2>
+      <h2> Rs.12134.66</h2>
       </div> 
   <div class="share">
     <div class="share-to-friends">
