--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Pin</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Pin</title>
 </head>
+
 <body>
   <style>
-    .input-group-text{
-  position: absolute;
-  top: 40%;
-  left: 46%;
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+    .input-group-text {
+      position: absolute;
+      top: 40%;
+      left: 46%;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
 
-.pin-boxes input[type='password'] {
-    width: 40px; /* Width of boxes */
-    height: 40px; /* Height of boxes */
-    border: 1px solid #333; /* Border color */
-    text-align: center; /* Center text */
-    margin-right: 5px; /* Space between boxes */
-    line-height: 40px;
-  }
-  
-  .pin-boxes input[type='password']:focus {
-    outline: none;
-    border-color: #80bdff;
-  }
-  
-  .pin-boxes{
-    position: absolute;
-    top: 50%;
-    left: 40%;
-  }
+    .pin-boxes input[type='password'] {
+      width: 40px;
+      /* Width of boxes */
+      height: 40px;
+      /* Height of boxes */
+      border: 1px solid #333;
+      /* Border color */
+      text-align: center;
+      /* Center text */
+      margin-right: 5px;
+      /* Space between boxes */
+      line-height: 40px;
+    }
 
-  .mpin{
-    position: absolute;
-    top: 60%;
-    left: 45%;
-  }
+    .pin-boxes input[type='password']:focus {
+      outline: none;
+      border-color: #80bdff;
+    }
+
+    .pin-boxes {
+      position: absolute;
+      top: 50%;
+      left: 40%;
+    }
+
+    .mpin {
+      position: absolute;
+      top: 60%;
+      left: 45%;
+    }
   </style>
   <div class="container">
     <span class="input-group-text" id="basic-addon2">ENTER PIN</span>
   </div>
-</div>
-    <form action="/pin" method="POST">
-        <!-- <div class="mb-3">
+  </div>
+
+
+
+
+  <form action="/pin" method="POST">
+    <!-- <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
@@ -57,42 +69,46 @@
           <label for="pin" class="form-label">Enter PIN</label>
           <input type="password" class="form-control" id="pin" name="pin" placeholder="do not share" required>
         </div> -->
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <div class="pin-boxes" >
-          <input type="password" name="pin1" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" autofocus autocomplete="off" />
-          <input type="password" name="pin2" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
-          <input type="password" name="pin3" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
-          <input type="password" name="pin4" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
-          <input type="password" name="pin5" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
-          <input type="password" name="pin6" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
-          <!-- Add more input boxes as needed -->
-        </div>
-       <!-- </form> -->
-        <button type="submit" class="btn btn-primary mpin">Generate New MPIN</button>
-    </form>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="pin-boxes">
+      <input type="password" name="pin1" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" autofocus
+        autocomplete="off" />
+      <input type="password" name="pin2" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+      <input type="password" name="pin3" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+      <input type="password" name="pin4" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+      <input type="password" name="pin5" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+      <input type="password" name="pin6" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
+      <!-- Add more input boxes as needed -->
+    </div>
+    <!-- </form> -->
+    <button type="submit" class="btn btn-primary mpin">Generate New MPIN</button>
+    <a href="/">already have it</a>
+    <a href="/balance">balance</a>
+  </form>
   </div>
-</div>
-</div>
-    <script>
-      document.addEventListener('DOMContentLoaded', (event) => {
-const inputs = document.querySelectorAll('.pin-boxes input[type="password"]');
+  </div>
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+      const inputs = document.querySelectorAll('.pin-boxes input[type="password"]');
 
-inputs.forEach((input, index) => {
-  input.addEventListener('keyup', (e) => {
-    if (e.key === "Backspace" && index > 0) {
-      inputs[index - 1].focus();
-    } else if (input.value.length === 1 && index < inputs.length - 1) {
-      inputs[index + 1].focus();
-    }
-  });
-});
-});
+      inputs.forEach((input, index) => {
+        input.addEventListener('keyup', (e) => {
+          if (e.key === "Backspace" && index > 0) {
+            inputs[index - 1].focus();
+          } else if (input.value.length === 1 && index < inputs.length - 1) {
+            inputs[index + 1].focus();
+          }
+        });
+      });
+    });
 
-</script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+  </script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
 </body>
+
 </html>
