--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,32 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/sign-in/">
+
+<style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+  <!-- Custom styles for this template -->
+  <link href="/styles/signupStyle.css" rel="stylesheet">
+
 </head>
-
-<body>
-    <div class="container">
-        <h1>Sign Up</h1>
-        <form action="/signup" method="POST">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">Sign Up</button>
-        </form>
-        <p>Already have an account? <a href="/signin">Sign In</a></p>
-    </div>
+<body class="text-center">
+  <form class="form-signin" action="/signup" method="POST">
+<h1 class="h3 mb-3 font-weight-normal">Please Sign Up</h1>
+<input type="text" name="name" id="name" class="form-control" placeholder="Name" required autofocus>
+<!-- <label for="inputEmail" class="sr-only">Email address</label> -->
+<input type="email" name="email" id="email" class="form-control" placeholder="Email address" required>
+<!-- <label for="inputPassword" class="sr-only">Password</label> -->
+<input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+<div class="checkbox mb-3">
+  <label>
+    <input type="checkbox" value="remember-me"> Remember me
+  </label>
+</div>
+<button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+<p class="signInAlert">Already have an account? <a href="/signin">Sign In</a></p>
+<p class="mt-5 mb-3 text-muted">&copy; 2024</p>
+</form>
 </body>
-
 </html>
