--- a/Public/styles/style2.css
+++ b/Public/styles/style2.css
@@ -1,4 +1,67 @@
+body{
+    background-image:linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3)) !important;
+    padding: 3px 15px !important;
+}
 .nav-item{
     position: relative;
-    left: 700px !important;
+    left: 900px !important;
+}
+
+.content{
+text-align: center; 
+position: relative;
+top: 200px;   
+}
+
+.content h1{
+    font-size: 80px;
+    color: #fff;
+    font-weight: 600;
+}
+
+.content p{
+font-size: 16px;
+color: #fff;
+text-align: center;
+padding: 5px 130px;
+}
+
+.content .startedBtn{
+text-decoration: none;
+display: inline-block;
+color: #fff;
+font-size: medium;
+border: 2px solid #fff;
+border-radius: 50px;
+padding: 14px 70px;
+margin-top: 20px;    
+}
+
+.content .startedBtn:hover{
+    background-color: #fff;
+    color: #333;
+}
+
+.hide{
+    display: none;
+}
+
+.backvdo{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+@media (min-aspect-ratio: 16/9){
+    .backvdo{
+        width: 100%;
+        height: auto;
+    }
+}
+@media  (max-aspect-ratio: 16/9){
+    .backvdo{
+        width: auto;
+        height: 100%;
+    }
 }
