--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="/Finance_Project/Public/views/styles/style2.css">
+    <link rel="stylesheet" href="/styles/style2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <style>
@@ -59,44 +59,62 @@
     </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse navItem" id="navbarSupportedContent">
-                <ul class="navItems navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                </ul>
-
+    <div class="hero">
+        <video autoplay loop muted plays-inline class="backvdo">
+            <source src="/styles/19905880-uhd_3840_2160_24fps.mp4" type="video/mp4">
+        </video>
+        <nav class="navbar navbar-expand-lg navbar-dark herosection">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">FinTrack</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navItem" id="navbarSupportedContent">
+                    <ul class="navItems navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
+                    </ul>
+    
+                </div>
             </div>
-        </div>
-    </nav>
-
-    <form id="mpinForm" action="/entre" method="POST">
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
+        </nav>
+    
+        <form id="mpinForm" action="/entre" method="POST" class="hide">
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    
+    
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <div class="content">
+        <h1>
+            WELCOME TO FinTrack
+        </h1>
+        <p>
+    We empower you to take control of your financial journey. Create accounts,
+    make deposits, and explore our intuitive dashboard. Easily track your financial activity,
+    set savings goals, and stay informed. Your financial well-being is our priority.🌟
+        </p>
+    <form action="" method="get">
+    <a href="" class="startedBtn">Get Started</a>
+    </form>    
+    </div>
+    </div>
+   
 </body>
 
 </html>
